--- a/porfolio/public/index.html
+++ b/porfolio/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="./logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Alberto Sosa Portfolio" />
-    <title>Portfolio</title>
+    <title>Portfolioa</title>
     <Link rel="stylesheet" href="./style.css"></Link>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
